--- a/app/src/main/res/layout/activity_edit_teman.xml
+++ b/app/src/main/res/layout/activity_edit_teman.xml
@@ -10,7 +10,9 @@
         android:id="@+id/textInputLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="75dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -18,8 +20,10 @@
             android:id="@+id/edNama"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/cardview_light_background"
-            android:hint="Nama" />
+            android:hint="Nama"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            tools:background="@color/white"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -35,16 +39,20 @@
             android:id="@+id/edTelp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/cardview_light_background"
-            android:hint="Telpon" />
+            android:background="@color/white"
+            android:hint="No Telpon"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/simpanBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Simpan"
+        android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:flow_horizontalBias="0.498"
+        app:flow_verticalBias="0.618"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />
